--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -3,7 +3,7 @@ name: 'Release PR Description'
 on:
   pull_request:
     branches:
-      - release-*
+      - 'releases-**'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
