--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -1,7 +1,10 @@
 name: 'Release PR Description'
 
 on:
-  pull_request:
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
     branches:
       - 'release-**'
 
