--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -1,10 +1,7 @@
 name: 'Release PR Description'
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
+  pull_request:
     branches:
       - 'release-**'
 
