--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
-	"changelog": "@rocket.chat/release-changelog",
+	"changelog": ["@changesets/changelog-github", { "repo": "RocketChat/Rocket.Chat" }],
 	"commit": false,
 	"fixed": [
 		["@rocket.chat/meteor", "@rocket.chat/core-typings", "@rocket.chat/rest-typings"]
